--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                                 </p>
                     </div>
                     <div id="videopl">
-                        <div class="video-containerz"><iframe src="https://www.youtube.com/embed/lx-5mFAndoc?rel=0" frameborder="0" allowfullscreen></iframe></div>
+                        <div class="video-containerz"><iframe src="https://www.youtube.com/embed/ciwyP0Hl1RE?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     </div>
                     <div id="vtext">
                         <div class="btnox">
                             <ul>
                                 <li><button class="occu3" title="Tahun Karya">2022</button></li>
-                                <li><span class="cardspan" title="Durasi">00:50</span></li>
+                                <li><span class="cardspan" title="Durasi">01:00</span></li>
                             </ul>
                         </div>
                         <h1 class="card-header2">Kompilasi Karya<br> di Ruangguru</h1>
