--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </p>
                     </div>
                     <div id="videopl">
-                        <div class="video-containerz"><iframe src="https://www.youtube.com/embed/lx-5mFAndoc?rel=0" frameborder="0" allowfullscreen></iframe></div>
+                        <div class="video-containerz"><iframe src="https://www.youtube.com/embed/ciwyP0Hl1RE?rel=0" frameborder="0" allowfullscreen></iframe></div>
                     </div>
                     <div id="vtext">
                         <div class="btnox">
@@ -132,7 +132,7 @@
                                     1280 x 720 / H.264 (.mp4) / 25 fps
                                 </p>
                                 <p class="infotxt">
-                                    Merupakan kompilasi video learning process untuk anak kelas SMP - SMA/SMK.
+                                    Merupakan kompilasi video learning process untuk murid kelas SMP - SMA/SMK.
                                 </p>
                     </div>
                     
