--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>    
         
             <div class="descp">
-            <p>Portfolio ini berisi semua karya terbaik Ade F. Oktaviantoro selama hampir 4 tahun berkarir sebagai Motion Graphic Designer dan Video Editor.
+            <p>Portfolio ini berisi semua karya terbaik Ade F. Oktaviantoro selama berkarir sebagai Motion Graphic Designer dan Video Editor.
                 <br>Untuk melihat portfolio karya 3D silahkan kunjungi link berikut: <a href="3d.html"><b>3D Documentation</b></a>.</p>
             </div>
         
