--- a/3d.html
+++ b/3d.html
@@ -35,10 +35,8 @@
 
                 <div class="transBTN">
                     <div class="tbtn">
-                    <ul>
-                        <li><a title="English" class="btntrans1" onclick="appearP1()">EN</a></li>
-                        <li><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></li>
-                    </ul>
+                        <span><a title="English" class="btntrans1" onclick="appearP1()">EN</a></span>
+                        <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
                 <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
@@ -275,10 +273,8 @@
 
                 <div class="transBTN">
                     <div class="tbtn">
-                    <ul>
-                        <li><a title="English" class="btntrans1" onclick="appearP1()">EN</a></li>
-                        <li><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></li>
-                    </ul>
+                        <span><a title="English" class="btntrans1" onclick="appearP1()">EN</a></span>
+                        <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
                 <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
