--- a/mograph.html
+++ b/mograph.html
@@ -37,10 +37,8 @@
                 </div>
                 <div class="transBTN">
                     <div class="tbtn">
-                        <ul>
-                            <li><a title="English" class="btntrans1" onclick="appearP1()">EN</a></li>
-                            <li><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></li>
-                        </ul>
+                        <span><a title="English" class="btntrans1" onclick="appearP1()">EN</a></span>
+                        <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
                 <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
@@ -251,10 +249,8 @@
                 </div>
                 <div class="transBTN">
                     <div class="tbtn">
-                        <ul>
-                            <li><a title="English" class="btntrans1" onclick="appearP1()">EN</a></li>
-                            <li><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></li>
-                        </ul>
+                        <span><a title="English" class="btntrans1" onclick="appearP1()">EN</a></span>
+                        <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
                 <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
