--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,9 @@
 <script src="preloader.js"></script>
 <script src="other.js"></script>
 
-  
+    <a href="#" class="back-to-top">
+        <span class="upicon"><i class="fa fa-solid fa-chevron-up"></i></span>
+    </a>
     
 
 
