--- a/mograph.html
+++ b/mograph.html
@@ -445,7 +445,9 @@
 <script src="other.js"></script>
 
         
-
+    <a href="#" class="back-to-top">
+        <span class="upicon"><i class="fa fa-solid fa-chevron-up"></i></span>
+    </a>
 
 
 
