--- a/3d.html
+++ b/3d.html
@@ -261,13 +261,13 @@
             <nav>
                 <div class="logots" id="logotsOp"><a href="index.html"><img src="images/logo-ts.png"></a></div>
                 <div class="nameset" id="setname"><a href="index.html">Ade F. Oktaviantoro</a></div>
-                <div class="nav-links" id="navLinks">
-                    <div class="logodlm"><a href="index.html"><img src="images/logo-ts.png"></a></div>
-                    <div class="closeMenu"><i class="fa fa-times" onclick="hideMenu()"></i></div>
+                <div class="nav-links2" id="navLinks2">
+                    <div class="logodlm2"><a href="index.html"><img src="images/logo-ts.png"></a></div>
+                    <div class="closeMenu2"><i class="fa fa-times" onclick="hideMenu2()"></i></div>
                     <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <!---<li><a href="">ABOUT</a></li>-->
-                    <li><a href="mailto:af.oktaviantoro@gmail.com">CONTACT</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <!---<li><a href="">ABOUT</a></li>-->
+                        <li><a href="mailto:af.oktaviantoro@gmail.com">CONTACT</a></li>
                     </ul> 
                 </div>
 
@@ -277,7 +277,7 @@
                         <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
-                <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
+                <div class="openMenu2"><i class="fa fa-bars" onclick="showMenu2()"></i></div>
             </nav>
 
 
