--- a/index.html
+++ b/index.html
@@ -1120,9 +1120,9 @@
             <nav>
                 <div class="logots" id="logotsOp"><a href="index.html"><img src="images/logo-ts.png"></a></div>
                 <div class="nameset" id="setname"><a href="">Ade F. Oktaviantoro</a></div>
-                <div class="nav-links" id="navLinks">
-                    <div class="logodlm"><a href="index.html"><img src="images/logo-ts.png"></a></div>
-                    <div class="closeMenu"><i class="fa fa-times" onclick="hideMenu()"></i></div>
+                <div class="nav-links2" id="navLinks2">
+                    <div class="logodlm2"><a href="index.html"><img src="images/logo-ts.png"></a></div>
+                    <div class="closeMenu2"><i class="fa fa-times" onclick="hideMenu2()"></i></div>
                         <ul>
                             <li><a href="">HOME</a></li>
                             <!---<li><a href="">ABOUT</a></li>-->
@@ -1137,7 +1137,7 @@
                         <span><a title="Bahasa Indonesia" class="btntrans2" onclick="appearP2()">ID</a></span>
                     </div>
                 </div>
-                <div class="openMenu"><i class="fa fa-bars" onclick="showMenu()"></i></div>
+                <div class="openMenu2"><i class="fa fa-bars" onclick="showMenu2()"></i></div>
             </nav>
 
 
