--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                                                             <li><span>2022</span></li>
                                                             <li><span>Ruang Raya Indonesia</span></li>
                                                         </ul>
-                                                        <span>Commercial Project</span>
+                                                        <ul>
+															<li><span>Commercial Project</span></li>
+														</ul>
                                                     </div>
                                                 </div>
                                             </div>
@@ -466,7 +468,9 @@
                                                             <li><span>2023</span></li>
                                                             <li><span></span></li>
                                                         </ul>
-                                                        <span>Personal Project</span>
+														<ul>
+                                                        	<li><span>Personal Project</span></li>
+														</ul>
                                                     </div>
                                                 </div>
                                             </div>
@@ -541,7 +545,9 @@
 																<li><span>2022</span></li>
 																<li><span>Animator — Motion Graphic</span></li>
 															</ul>
-															<span>Fulltime</span>
+															<ul>
+																<li><span>Fulltime</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -712,7 +718,9 @@
                                                             <li><span>Sports Video</span></li>
 															<li><span>Video Editor</span></li>
                                                         </ul>
-                                                        <span>Freelance</span>
+														<ul>
+                                                        	<li><span>Freelance</span></li>
+														</ul>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1312,7 +1320,9 @@
 																<li><span>2019</span></li>
 																<li><span>Animator — Motion Graphic</span></li>
 															</ul>
-															<span>Personal Work</span>
+															<ul>
+																<li><span>Personal Work</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -1410,7 +1420,9 @@
 																				<li><span>2020</span></li>
 																				<li><span>Video Editor</span></li>
 																			</ul>
-																			<span>Hikmawanmie Studio</span>
+																			<ul>
+																				<li><span>Hikmawanmie Studio</span></li>
+																			</ul>
 																		</div>
 																	</div>
 																</div>
@@ -1456,7 +1468,9 @@
 																				<li><span>2020</span></li>
 																				<li><span>Video Editor</span></li>
 																			</ul>
-																			<span>Hikmawanmie Studio</span>
+																			<ul>
+																				<li><span>Hikmawanmie Studio</span></li>
+																			</ul>
 																		</div>
 																	</div>
 																</div>
@@ -1502,7 +1516,9 @@
 																				<li><span>2020</span></li>
 																				<li><span>Video Editor</span></li>
 																			</ul>
-																			<span>Hikmawanmie Studio</span>
+																			<ul>
+																				<li><span>Hikmawanmie Studio</span></li>
+																			</ul>
 																		</div>
 																	</div>
 																</div>
@@ -1548,7 +1564,9 @@
 																				<li><span>2020</span></li>
 																				<li><span>Video Editor</span></li>
 																			</ul>
-																			<span>Hikmawanmie Studio</span>
+																			<ul>
+																				<li><span>Hikmawanmie Studio</span></li>
+																			</ul>
 																		</div>
 																	</div>
 																</div>
@@ -1594,7 +1612,9 @@
 																				<li><span>2020</span></li>
 																				<li><span>Video Editor</span></li>
 																			</ul>
-																			<span>Hikmawanmie Studio</span>
+																			<ul>
+																				<li><span>Hikmawanmie Studio</span></li>
+																			</ul>
 																		</div>
 																	</div>
 																</div>
@@ -1649,7 +1669,9 @@
                                                                             <li><span>2020</span></li>
                                                                             <li><span>Video Editor</span></li>
                                                                         </ul>
-																		<span>Hikmawanmie Studio</span>
+																		<ul>
+																			<li><span>Hikmawanmie Studio</span></li>
+																		</ul>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -1743,7 +1765,9 @@
 																<li><span>Director</span></li>
 																<li><span>Animator</span></li>
 															</ul>
-															<span>AndalanKami Production</span>
+															<ul>
+																<li><span>AndalanKami Production</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -1828,7 +1852,9 @@
 																<li><span>Producer</span></li>
 																<li><span>Video Editor</span></li>
 															</ul>
-															<span>Freelance</span>
+															<ul>
+																<li><span>Freelance</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -1924,7 +1950,9 @@
 																<li><span>2023</span></li>
 																<li><span>Animator — Motion Graphic</span></li>
 															</ul>
-															<span>Self Improvement</span>
+															<ul>
+																<li><span>Self Improvement</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -2036,7 +2064,9 @@
 																<li><span>2020</span></li>
 																<li><span>Animator — Motion Graphic</span></li>
 															</ul>
-															<span>Self Improvement</span>
+															<ul>
+																<li><span>Self Improvement</span></li>
+															</ul>
 														</div>
 													</div>
 													<div id="pNone1">
@@ -2068,24 +2098,28 @@
                     </div>
                     <div id="bottom">
                         <div class="footer">
-                            <div class="socmed">
-                                <ul>
-                                    <li>
-                                        <a href="https://www.instagram.com/okttoro/" target="_blank" title="adetoro° Instagram"><i class="fa fa-brands fa-instagram"></i></a>
-                                        <a href="https://dribbble.com/okttoro" target="_blank" title="adetoro° Dribbble"><i class="fa fa-brands fa-dribbble"></i></a>
-                                        <a href="mailto:af.oktaviantoro@gmail.com" target="_blank" title="adetoro° Email"><i class="fa fa-regular fa-envelope"></i></a>
-                                    </li>
-                                    <li>
-                                        <div class="strip"></div>
-                                    </li>
-                                    <li>
-                                        <span class="iam"><a href="">About me</a></span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="copyrights">
-                                <span><i class="fa fa-copyright"></i> 2023 Ade F. Oktaviantoro</span>
-                            </div>
+							<div class="footerContent">
+								<div class="adjustFooter">
+									<div class="socmed">
+										<ul>
+											<li>
+												<a href="https://www.instagram.com/okttoro/" target="_blank" title="adetoro° Instagram"><i class="fa fa-brands fa-instagram"></i></a>
+												<a href="https://dribbble.com/okttoro" target="_blank" title="adetoro° Dribbble"><i class="fa fa-brands fa-dribbble"></i></a>
+												<a href="mailto:af.oktaviantoro@gmail.com" target="_blank" title="adetoro° Email"><i class="fa fa-regular fa-envelope"></i></a>
+											</li>
+											<li>
+												<div class="strip"></div>
+											</li>
+											<li>
+												<span class="iam"><a href="">About me</a></span>
+											</li>
+										</ul>
+									</div>
+									<div class="copyrights">
+										<span><i class="fa fa-copyright"></i> 2023 Ade F. Oktaviantoro</span>
+									</div>
+								</div>
+							</div>
                         </div>
                     </div>
                 </div>
