--- a/index.html
+++ b/index.html
@@ -1304,10 +1304,10 @@
 																	<div class="undertxt">
 																		Pantura Lane is a new perspective visualization in looking back at the dark history of the Jalan Pantura construction in Indonesia.<br><br>
 																		This work was displayed under the title of Visual Communication Design event 
-																		<a href="https://www.instagram.com/p/B39KGHzHldX/" title="Read article" target="_blank"><u>
+																		<a href="https://www.instagram.com/p/B39KGHzHldX/" title="Visit the page" target="_blank"><u>
 																		Ultigraph ‘SARASABHANA’</u></a>
 																		at the Universitas Multimedia Nusantara (UMN) on 28 October - 1 November 2019, as well as winning
-																		<a href="https://dkv.umn.ac.id/berita/ultigraph-sarasabhana-menuju-ranah-internasional/" title="Visit the page" target="_blank"><u>
+																		<a href="https://dkv.umn.ac.id/berita/ultigraph-sarasabhana-menuju-ranah-internasional/" title="Read the article" target="_blank"><u>
 																		The Best Motion Graphics Award as the 1st Champion in the category of Motion Graphics competition.</u></a>
 																	</div>
 																</div>
@@ -2111,7 +2111,128 @@
 												<div class="strip"></div>
 											</li>
 											<li>
-												<span class="iam"><a href="">About me</a></span>
+												<span class="iam">
+													<a href="#popup0">
+														About me
+													</a>
+												</span>
+												<div class="popup" id="popup0">
+													<div class="sizeBottom">
+														<div class="popup___content">
+															<div class="popup-head">
+																<div class="popup-location">
+																	<ul>
+																		<li><span>About me</span></li>
+																	</ul>
+																</div>
+																<div class="popIcon" title="Close">
+																	<a href="##" class="popup___close">
+																		<svg xmlns="http://www.w3.org/2000/svg" role="img" width="48px" height="48px" viewBox="0 0 24 24" aria-labelledby="closeIconTitle" stroke="#222222" stroke-width="0.5" stroke-linecap="round" stroke-linejoin="round" fill="none" color="#222222"> <title id="closeIconTitle">Close</title> <path d="M6.34314575 6.34314575L17.6568542 17.6568542M6.34314575 17.6568542L17.6568542 6.34314575"/> </svg>
+																	</a>
+																</div>
+															</div>
+															<div class="contentScroll0">
+																<div class="tabelAbout">
+																	<div id="tabName">
+																		<span class="abName">
+																			Ade F. Oktaviantoro
+																		</span>
+																	</div>
+																	<div id="tabEmail">
+																		<span class="abEmail">
+																			<a href="mailto:af.oktaviantoro@gmail.com" target="_blank" title="adetoro° Email"><u>Email</u></a>
+																		</span>
+																	</div>
+																	<div id="tabSocmed">
+																		<span class="abList">
+																			<ul>
+																				<li>Also available on:</li>
+																				<li>
+																					<a href="https://www.instagram.com/okttoro/" target="_blank" title="adetoro° Instagram"><u>Instagram</u></a>
+																				</li>
+																				<li>
+																					<a href="https://dribbble.com/okttoro" target="_blank" title="adetoro° Dribbble"><u>Dribbbble</u></a>
+																				</li>
+																			</ul>
+																		</span>
+																	</div>
+																	<div id="tabIntro">
+																		<div class="abIntro">
+																			Also known as adetoro° — Toro.
+																			<br>
+																			I'm a designer specialized in motion graphic, video, editor, and 3d design. After obtaining a bachelor's degree in Visual Communication Design at Dian Nuswantoro University,  I had experiences working on-site and remotely as an animator — motion graphic and video editor for about 5 years.
+																			I'm now based in Central Java, Indonesia.
+																			<br><br>
+																			If you need a designer who has experience like me, <span><a href="mailto:af.oktaviantoro@gmail.com" target="_blank" title="adetoro° Email"><u>let's work together</u></a></span>.
+																		</div>
+																	</div>
+																	<div id="tabEmpty"></div>
+																	<div id="tabExp">
+																		<span class="abName">
+																			Experiences
+																		</span>
+																	</div>
+																	<div id="tabExp1">
+																		<span>
+																			2021 - Now
+																		</span>
+																		<span class="conExp1">
+																			Self Employed
+																		</span>
+																		<span class="conExp2">
+																			<a href="https://www.canva.com/p/atvisual/" target="_blank" title="adetoro° Canva"><u>Canva Creator</u></a>
+																		</span>
+																	</div>
+																	<div id="tabExp2">
+																		<span>
+																			2022
+																		</span>
+																		<span class="conExp1">
+																			Ruang Raya Indonesia
+																		</span>
+																		<span class="conExp2">
+																			Animator — Motion Graphic
+																		</span>
+																	</div>
+																	<div id="tabExp3">
+																		<span>
+																			2020 - 2021
+																		</span>
+																		<span class="conExp1">
+																			Pandit Football — Mola Sport
+																		</span>
+																		<span class="conExp2">
+																			Video Editor
+																		</span>
+																	</div>
+																	<div id="tabExp4">
+																		<span>
+																			2019 - 2020
+																		</span>
+																		<span class="conExp1">
+																			Amphibi Studio
+																		</span>
+																		<span class="conExp2">
+																			Animator — Motion Graphic
+																		</span>
+																	</div>
+																	<div id="tabExp5">
+																		<span>
+																			2017 - 2019
+																		</span>
+																		<span class="conExp1">
+																			Pekopo Studio
+																		</span>
+																		<span class="conExp2">
+																			Animator — Motion Graphic
+																		</span>
+																	</div>
+																	<div id="tabEmpty2"></div>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
 											</li>
 										</ul>
 									</div>
