--- a/index.html
+++ b/index.html
@@ -1881,97 +1881,12 @@
                             </div>
                             <div id="explore1">
                                 <div class="doc-btn">
-                                    <a href="#popup9" class="hero-btndoc">
-                                        <div class="docs-content" title="Visit the page">
+                                    <a href="https://medium.com/@okttoro/membelah-dominasi-dengan-rive-8345ff39be15" target="_blank" class="hero-btndoc">
+                                        <div class="docs-content" title="Read article">
                                             <span>Interactive Animation</span>
                                         </div>
                                         <img src="./svg/arrow-right.svg">
                                     </a>
-                                </div>
-                                <div class="popup" id="popup9">
-                                    <div class="sizeBottom">
-                                        <div class="popup___content">
-                                            <div class="popup-head">
-                                                <div class="popup-location">
-                                                    <ul>
-                                                        <li><span>Explorations</span></li>
-                                                    </ul>
-                                                </div>
-												<div class="popIcon" title="Close">
-													<a href="##" class="popup___close">
-														<svg xmlns="http://www.w3.org/2000/svg" role="img" width="48px" height="48px" viewBox="0 0 24 24" aria-labelledby="closeIconTitle" stroke="#222222" stroke-width="0.5" stroke-linecap="round" stroke-linejoin="round" fill="none" color="#222222"> <title id="closeIconTitle">Close</title> <path d="M6.34314575 6.34314575L17.6568542 17.6568542M6.34314575 17.6568542L17.6568542 6.34314575"/> </svg>
-													</a>
-												</div>
-                                            </div>
-											<div class="contentScrollMobile1P">
-												<div class="popupTabel">
-													<div id="pHead">
-														<div id="identityContent" class="identityContent">
-															<span class="identityTitle">
-																Interactive Animation
-															</span>
-														</div>
-													</div>
-													<div id="pMedia">
-														<div class="mediaContainerIN">
-															<iframe style="border: solid 1px #222222" width="500" height="500" src="https://rive.app/s/LpBYVtxZkkqPktNO7BJn0w/embed" allowfullscreen></iframe>
-														</div>
-													</div>
-													<div id="pText">
-														<div class="pText-container">
-															<div class="pText-content">
-																<div class="pText-Head">
-																	<span>Experimental</span>
-																	<span>Interactive</span>
-																</div>
-																<div class="pText-Title">
-																	<span>Interactive — </span>
-																	<span class="resizeTitle">Character Animation</span>
-																</div>
-																<div class="pText-info">
-																	<div class="undertxt">
-																		This work was created to develop self-ability by using <a href="https://rive.app" title="Visit the page" target="_blank">
-																		Rive.app</a> which is a web application for producing animation and interactive media.
-																		<br><br>
-																		<u>Guide</u><br>
-																		To interact with these characters, please point the cursor to the area around the character object and move the cursor randomly then press the character object.
-																		<br><br>
-																		<i class="fa-solid fa-circle-info"></i>
-																		<br>
-																		To find out how Rive.app works and its prospects in the digital content industry, you can visit the following page: <a href="https://medium.com/@okttoro/membelah-dominasi-dengan-rive-8345ff39be15" title="Visit the page" target="_blank"><u>"Membelah dominasi dengan Rive"</u></a>.
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div id="pFoot">
-														<div class="pFoot-content">
-															<ul>
-																<li><span>2023</span></li>
-																<li><span>Animator — Motion Graphic</span></li>
-															</ul>
-															<ul>
-																<li><span>Self Improvement</span></li>
-															</ul>
-														</div>
-													</div>
-													<div id="pNone1">
-														<div class="endPage">
-															<div class="noiseBG"></div>
-															<svg>
-																<filter id="noise">
-																	<feTurbulence id="turbulence">
-																		<animate attributeName="baseFrequency" dur="1s" values="0.9 0.9;0.8 0.8;0.9 0.9;" repeatCount="indefinite"></animate>
-																	</feTurbulence>
-																	<feDisplacementMap in="SourceGraphic" scale="60"></feDisplacementMap>
-																</filter>
-															</svg>
-														</div>
-													</div>
-												</div>
-											</div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div id="explore2">
